feat: Enhance navigation and destination pages
Introduce a new 'Destinations' page and update the Navbar component for improved user navigation and experience. The Navbar now features smoother dropdown transitions and the main page incorporates a search form for destinations. Additionally, color schemes and animations have been refined across the application.

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -19,23 +20,23 @@
           extend: {
             fontFamily: {
               sans: ['"Plus Jakarta Sans"', 'sans-serif'],
-              serif: ['"Plus Jakarta Sans"', 'sans-serif'], // Fallback to sans for modern look
+              serif: ['"Plus Jakarta Sans"', 'sans-serif'], 
             },
             colors: {
               golf: {
                 50: '#f5fcf2',
                 100: '#e7f6e0',
-                500: '#429716', // Secondary
+                500: '#429716', 
                 600: '#367d12',
                 700: '#2d6a10',
-                800: '#315122', // Primary
-                900: '#263e1a', // Darker Primary
-                950: '#1b2b12', // Darkest
+                800: '#315122', 
+                900: '#263e1a', 
+                950: '#1b2b12', 
               },
               gold: {
-                400: '#fbbf24',
-                500: '#f59e0b',
-                600: '#d97706',
+                400: '#d4af37',
+                500: '#c5a059',
+                600: '#b08d44',
               }
             }
           }
